finished outlook integration. Cleaned up GUI flow

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ icalendar
 discord_webhook
 winshell
 pywin32
+requests
+requests-oauthlib
+beatifulsoup4
+stringcase
+python-dateutil
+tzlocal
+pytz
